--- a/LaTeX_diplomaterv/abstract.tex
+++ b/LaTeX_diplomaterv/abstract.tex
@@ -3,13 +3,13 @@
 %----------------------------------------------------------------------------
 \chapter*{Kivonat}\addcontentsline{toc}{chapter}{Kivonat}
 
-Napjainkban a böngészőben futó webalkalmazások már sok teret hódítottak helyettesítve az asztali alkalmazásokat, hiszen könnyebb a telepítésük, nem kell tárhellyel spórolni és a felhőalapú megoldások bizonyos értelemben biztonságban helyezik az adatainkat. A webes diagramszerkesztő egy jó példa erre, mivel pár percen belül már akár kollaboratívan dolgozhatunk egy diagramon távoli munkatársunkkal.
+Napjainkban a böngészőben futó webalkalmazások már sok teret hódítottak helyettesítve az asztali alkalmazásokat, hiszen könnyebb a telepítésük, nem kell a tárhellyel spórolni és a felhőalapú megoldások bizonyos értelemben biztonságba helyezik az adatainkat. A webes diagramszerkesztő egy jó példa erre, mivel pár percen belül már akár kollaboratívan dolgozhatunk egy diagramon távoli munkatársunkkal.
 
-A szakdolgozatom célja egy webes modellszerkesztő alkalmazás, ami alkalmas vizuális programozásra és kódgenerálásra és ezen felül kollaboratívan lehessen dolgozni benne. Ez a cél mellett a kiválasztott technológiákat is meg kellet ismernem és az elkészült alkalmazást teljesítmény szempontjából értékeltem.
+A diplomamunkám célja egy webes modellszerkesztő alkalmazás, ami alkalmas vizuális programozásra és kódgenerálásra és ezen felül kollaboratívan lehet dolgozni benne. Ezen cél mellett a kiválasztott technológiákat is meg kellett ismernem és az elkészült alkalmazást teljesítmény szempontjából értékelnem.
 
-A Javascript reneszánszát éli napjainkban. Már rég nem csak arra való, hogy a böngészőben dinamikus layout-ot létrehozzunk, eljött az a pont, ahol kliens-, szerver- és adatbázis szinten -- idegen szóval -- \emph{full-stack} képességei vannak. A szakdolgozatom keretein belül meg akartam vizsgálni, hogy mennyire érett a technológia komplex webalkalmazások fejlesztésére. 
+A Javascript reneszánszát éli napjainkban. Már rég nem csak arra való, hogy a böngészőben dinamikus layout-ot létrehozzunk, eljött az a pont, ahol kliens-, szerver- és adatbázis szinten alkalmazható -- idegen szóval -- \emph{full-stack} technológia. A diplomamunkám keretein belül meg akartam vizsgálni, hogy mennyire érett a technológia komplex webalkalmazások fejlesztésére. 
 
-Munkám eredménye egy kollaboratív diagramszerkesztő, amiben egy kódtranszformációs template-et is megadva tetszőleges nyelvű kódot lehet generálni, Javascript esetében ezt a kódot fel is lehet használni más rendszerben. A kiválasztott technológia alkalmas volt hatékony prototipizálásra, modularitásra és elegáns megoldások implementálására.  
+Munkám eredménye egy kollaboratív diagramszerkesztő, amiben egy kódtranszformációs template-et is megadva tetszőleges nyelvű kódot lehet generálni, Javascript esetében ezt a kódot fel is lehet használni más rendszerben. A kiválasztott technológia alkalmas volt hatékony prototipizálásra, moduláris alkalmazás fejlesztésére és elegáns megoldások implementálására.  
 
 \vfill
 
@@ -18,6 +18,13 @@ Munkám eredménye egy kollaboratív diagramszerkesztő, amiben egy kódtranszfo
 %----------------------------------------------------------------------------
 \chapter*{Abstract}\addcontentsline{toc}{chapter}{Abstract}
 
-Ha jó a magyar, megírom az angolt.
+Web applications have become significantly widespread nowadays replacing desktop applications. Reasons for this fact include ease of installation, lack of a need to worry about disk space usage and, in some ways, the increased security of data stored in the cloud. The in-browser diagram editor is a good example since we can begin a collaborative editing session in minutes using such an application.
+
+The goal of my thesis is the development of a diagram editor web application, that enables visual programming and code generation in a real-time collaborative way. In order to achieve this goal I also needed to research the technology I aimed to use and to evaluate the performance of the finished application. 
+
+Javascript is going through a renaissance. It has grown beyond creating dynamic layout in the browser to the point where it can be applied to the client, server and database layers. This means it has grown into a \emph{full-stack} technology. I aimed to see how mature this technology was for building complex web applications.
+
+The result is a collaborative diagram editor which features a transformation template editor enabling various kinds of code generation. In the case of Javascript output, this code can be imported into existing applications. I found the technology to be efficient for prototyping, building modular applications and achieving elegant solutions. 
+
 \vfill
 
