--- a/LaTeX_diplomaterv/chapter2.tex
+++ b/LaTeX_diplomaterv/chapter2.tex
@@ -11,7 +11,7 @@ Ebben a fejezetben először elterjedt diagram és dokumentum szerkesztő alkalm
 \subsection{Lucidcharts}
 %----------------------------------------------------------------------------
 
-Lucidchart egy HTML5 és Javascript alapú diagramszerkesztő eszköz.  2008-ban lett béta verzióként elindítva\cite{lucidref}, azóta a teljességre törekedve elég sok modellezési nyelvből lehet már választani: UML diagram típusok nagy része, hálózati diagramok, Venn diagram, kapcsolási rajzok, lakás tervrajz, mind map, okostelefon mockupok és akár folyamatábrát is lehet szerkeszteni.
+Lucidchart egy HTML5 és Javascript alapú diagramszerkesztő eszköz.  2008-ban lett béta verzióként elindítva \cite{lucidref}, azóta a teljességre törekedve elég sok modellezési nyelvből lehet már választani: UML diagram típusok nagy része, hálózati diagramok, Venn diagram, kapcsolási rajzok, lakás tervrajz, mind map, okostelefon mockupok és akár folyamatábrát is lehet szerkeszteni.
 
 
 \begin{figure}[!ht]
@@ -21,7 +21,7 @@ Lucidchart egy HTML5 és Javascript alapú diagramszerkesztő eszköz.  2008-ban
 \label{fig:lucideditor}
 \end{figure}
 
-A Lucidchart szerkeszőben lehetséges egyszerre módosítani egy diagramot. Kollaborációs szempontból vizsgálva az alkalmazást, a legegyszerűbb eset amit ki lehet próbálni az, hogy két különböző irányba húzza ugyanazt a dobozt két ember és egyszerre engedik el. Nem meglepő, hogy az az eredmény, hogy csak az egyik mozgatás eredménye érvényesül és a másik böngészőben ugyanarra a pozícióra ugrik a doboz. Erre a szituációra a saját alkalmazásomban is ugyanez a viselkedés tapasztalható.
+A Lucidchart szerkeszőben lehetséges egyszerre több felhasználó által módosítani egy diagramot. Kollaborációs szempontból vizsgálva az alkalmazást, a legegyszerűbb eset amit ki lehet próbálni az, hogy két különböző irányba húzza ugyanazt a dobozt két ember és egyszerre engedik el. Nem meglepő, hogy az az eredmény, hogy csak az egyik mozgatás eredménye érvényesül és a másik böngészőben ugyanarra a pozícióra ugrik a doboz. Ebben a szituációban a saját alkalmazásomban is ugyanez a viselkedés tapasztalható.
 
 Érdekes megfigyelni, hogy ugyanannak a szövegdoboznak a szerkesztése is kollaboratív: ketten tudnak egyszerre beírni a dobozba és mindkettőnek az eredménye megőrződik. Persze, a doboz kitörlése miatt elveszik az amit éppen beírt a másik felhasználó és aki éppen írt, az nem tudja visszavonni a törlést, mert nem ő törölte. A törlő felhasználó által visszavonva a műveletet nem találjuk meg azt a szöveget amit törlés előtt beleírtak.
 
@@ -47,9 +47,9 @@ A Google Docs szerkesztőjében szöveges dokumentumokat, Microsoft Excel típus
 
 \subsubsection{Kollaboráció a Google Docs-ban}
 
-A Google Docs régebbi verzióiban az egyszerre szerkesztett szövegek a dokumentum verzió számok alapján oldották fel a konfliktusokat\cite{googcoll1}. Laci és Réka szerkesztenek egy dokumentumot szeletet példáúl ``árvíztűrőtükörfúrógép''. Laci a tükör szó betűit dőltté alakítja, ezt a módosítást megkapja a szerver és elküldi Rékának, aki közben kicserélte a tükör szót almára. Ekkor Réka kliensoldalán történik a konfliktus feloldása és az a baj, hogy ``árvíztűrő\emph{alma}fúrógép'' és ``árvíztűrő\emph{tükör}\emph{alma}fúrógép'' mindkettő értelmes feloldás, ha azt gondoljuk, hogy Laci dőlt betűket akart és Réka át akart nevezni.
+A Google Docs régebbi verzióiban az egyszerre szerkesztett szövegek konfliktusait a dokumentum verzió számok alapján oldották fel \cite{googcoll1}. Laci és Réka szerkesztenek egy dokumentum szeletet példáúl ``árvíztűrőtükörfúrógép''. Laci a tükör szó betűit dőltté alakítja, ezt a módosítást megkapja a szerver és elküldi Rékának, aki közben kicserélte a tükör szót almára. Ekkor Réka kliensoldalán történik a konfliktus feloldása és az a baj, hogy ``árvíztűrő\emph{alma}fúrógép'' és ``árvíztűrő\emph{tükör}\emph{alma}fúrógép'' mindkettő értelmes feloldás, ha azt gondoljuk, hogy Laci dőlt betűs almát akart és Réka át tükör szót akart látni.
 
-Ezt továbbfejlesztették verzió alapú feloldás helyett atomi szerkesztési események időrendbeállításával. Az algoritmus neve ``Operational Transformation''\cite{googcoll2} és szöveg bevitel, törlés és stílus módosítás atomi műveleteket fésül össze. A transzformáció része abban áll, hogy egy másik felhasználó módosítását hozzá kell egyeztetni a friss módosításainkhoz. Példáúl adott egy 12 betűs szöveg \lstinline{almabirsalma}, ha Réka törölni akar a végéről két betűt (ma) és közben Laci hozzáír az elejére négy betűt (cica) , akkor Réka \lstinline|{DeleteText 'ma' @11-12}| műveletét Laci \lstinline|{DeleteText 'ma' @15-16}| -ra transzformálja, egyébként \lstinline{cicaalmabialma} lenne az eredmény. Így az eredmény \lstinline{cicaalmabirsal} és mindkét fél szándéka érvényesült.
+Ezt továbbfejlesztették verzió alapú feloldás helyett atomi szerkesztési események időrendbeállításával. Az algoritmus neve ``Operational Transformation'' \cite{googcoll2} és szöveg bevitel, törlés és stílus módosítás atomi műveleteket fésül össze. A transzformáció része abban áll, hogy egy másik felhasználó módosítását hozzá kell egyeztetni a friss módosításainkhoz. Példáúl adott egy 12 betűs szöveg \lstinline{almabirsalma}, ha Réka törölni akar a végéről két betűt (ma) és közben Laci hozzáír az elejére négy betűt (cica) , akkor Réka \lstinline|{DeleteText 'ma' @11-12}| műveletét Laci \lstinline|{DeleteText 'ma' @15-16}| -ra transzformálja, egyébként \lstinline{cicaalmabialma} lenne az eredmény. Így az eredmény \lstinline{cicaalmabirsal} és mindkét fél szándéka érvényesült.
 
 A stílus módosítás és szövegbevitel összefésülése esetében is történik transzformáció, példáúl, Laci vastagít a 10. és 20. karakterek között: \lstinline|{ApplyStyle bold @10-20}| és Réka közben beleír a közepébe három karaktert: \lstinline|{InsertText 'ABC' @15}|, az eredmény a kettő összefésülése lesz:  \lstinline|{ApplyStyle Bold @10-23}|, vagyis az eredeti szövegrészre vonatkozó stílusváltozás az újra is vonatkozik.
 
@@ -116,7 +116,7 @@ A JSFiddle érdekes egyrészt azért, mert az alkalmazásomban kódot kell majd 
 \label{fig:blockly}
 \end{figure}
 
-A Blockly nyelvben vizuálisan tudunk összerakni programokat ``puzzle''-szerű elemekből. A dokumentáció szerint ez kedvező kezdő programozóknak, mert ők két próblémával küzdenek: a gondolataikat nehezen fordítják le logikus kijelentésekre és a szintaxissal való küzdés. A Blockly-ben nem lehet a szintaxist elrontani, hiszen csak olyan parancsokat rakhatunk össze amik engedélyezettek a szintaxis szempontjából. Ez egy fontos gondolat vizuális nyelvek felhasználói felületének a kialakításánál -- nem is kell lehetségessé tenni a hibás bemenetet. Sok tanuló fejlesztő egy üres szöveges forrást látva nem tudja hol kezdje el, és a Blockly esetében választhat létező elemekből, ami megkönnyíti helyzetüket\cite{blocklyref}.
+A Blockly nyelvben vizuálisan tudunk összerakni programokat ``puzzle''-szerű elemekből. A dokumentáció szerint ez kedvező kezdő programozóknak, mert ők két próblémával küzdenek: a gondolataikat nehezen fordítják le logikus kijelentésekre és a szintaxissal való küzdés. A Blockly-ben nem lehet a szintaxist elrontani, hiszen csak olyan parancsokat rakhatunk össze amik engedélyezettek a szintaxis szempontjából. Ez egy fontos gondolat vizuális nyelvek felhasználói felületének a kialakításánál -- nem is kell lehetségessé tenni a hibás bemenetet. Sok tanuló fejlesztő egy üres szöveges forrást látva nem tudja hol kezdje el, és a Blockly esetében választhat létező elemekből, ami megkönnyíti helyzetüket \cite{blocklyref}.
 
 Az egyik példa alkalmazás Blockly alapon pont egy Python és Javascript kód generátor, ami lefordítja a diagramot kóddá, ez sejteti az egyik okot amiért nem ilyen jellegű modellezési alkalmazást fejlesztettem: mivel a grafikus változat egy-az-egyben megfelel a generált kódnak, akkor főleg Python esetében, nem indokolt egy tapasztalt fejlesztőnek a grafikus felület használata. Más szóval a grafikus felületet nem arra használjuk Blockly-ban, hogy olyat fejezzünk ki, amit nem lehet, vagy nehéz kódban kifejezni. 
 
