--- a/LaTeX_diplomaterv/chapter6.tex
+++ b/LaTeX_diplomaterv/chapter6.tex
@@ -1,17 +1,19 @@
 %----------------------------------------------------------------------------
-\chapter{Összefoglalás}
+\chapter{Összefoglalás és továbbfejlesztés}
 %----------------------------------------------------------------------------
 
-A szakdolgozatommal elértem a kitűzött célt: létező kollaboratív alkalmazás vizsgálata alapján megterveztem egy olyan rendszert, ami több felhasználónak teszi lehetővé, hogy egyidőben dolgozzanak egy diagramon. Emellett a felhasználó egy vizuális nyelvet is létrehozhat egy transzformáció megírásával, majd a generált kódot fel is használhatja. 
+A diplomamunkámmal elértem a kitűzött célt: létező kollaboratív alkalmazás vizsgálata alapján megterveztem egy olyan rendszert, ami több felhasználónak teszi lehetővé, hogy egyidőben dolgozzanak egy diagramon. Emellett a felhasználó egy vizuális nyelvet is létrehozhat egy transzformáció megírásával, majd a generált kódot fel is használhatja. 
 
 Teljesítmény szempontjából a kollaboráció elég jól működik és a webszerver és adatbázis is megfelelően jól teljesít, a felhasználói élményen lehet még javítani és jelen állapotában -- kliensoldali teljesítménypróblémák miatt -- 100 elemszám alatt jól lehet használni.
 
 További pozitív eredmény az, hogy akár a továbbfejlesztések nélkül is a rendszer alkalmazható más rendszerek modellezési próblémáinak megoldására. 
 
-A munka sikeres abból a szempontból is, hogy a MongoDB, NodeJs és AngularJS alapokon felépített prototípus, majd teljes alkalmazást izgalmas, kényelmes és tanulságos volt fejleszteni. A jövőben mindenképpen fel fogom használni az említett technológiákat.
+A munka sikeres abból a szempontból is, hogy a MongoDB, NodeJs és AngularJS technológiákból felépített prototípus, majd teljes alkalmazás izgalmas, kényelmes és tanulságos volt fejleszteni. A jövőben mindenképpen fel fogom használni az említett technológiákat.
 
 
 
+
+\input{src/next}
 
 
 
