--- a/LaTeX_diplomaterv/mybib.bib
+++ b/LaTeX_diplomaterv/mybib.bib
@@ -98,6 +98,20 @@
 }
 
 
+@misc{underscorejs.org,
+  author= "Underscore.JS",
+  title = {Underscore.JS},
+  year = 2013,
+  howpublished = {\url{http://underscorejs.org}},
+  note = {Accessed: 2013-11-15}
+}
+@misc{mongoexplain,
+  author= "MongoDB Inc.",
+  title = {MongoDB Manual},
+  year = 2013,
+  howpublished = {\url{http://docs.mongodb.org/manual/reference/method/cursor.explain/}},
+  note = {Accessed: 2013-11-15}
+}
 @misc{acidref,
   author= "Giorgio Sironi",
   title = {How ACID is MongoDB?},
