--- a/LaTeX_diplomaterv/src/next.tex
+++ b/LaTeX_diplomaterv/src/next.tex
@@ -3,7 +3,7 @@
 \section{Továbbfejlesztési lehetőségek}
 %----------------------------------------------------------------------------
 
-A következő alfejezetekben azokat az ötleteket gyűjtöm össze amik számomra a továbbfejlesztési irányokat jelentik, hiszen bízom benne, hogy a jövőbeli munkám során hasznos lehet a szakdolgozat alatt fejlesztett alkalmazás.
+A következő alfejezetekben azokat az ötleteket gyűjtöm össze amik számomra a továbbfejlesztési irányokat jelentik, hiszen bízom benne, hogy a jövőbeli munkám során hasznos lehet a diplomamunka alatt fejlesztett alkalmazás.
 
 \subsection{Vizuális modellezés kibővítése új elemekkel}
 
