--- a/LaTeX_diplomaterv/introduction.tex
+++ b/LaTeX_diplomaterv/introduction.tex
@@ -2,13 +2,16 @@
 \chapter*{Bevezető}\addcontentsline{toc}{chapter}{Bevezető}
 %----------------------------------------------------------------------------
 
+\subsubsection{Motiváció}
 Néhány éve foglalkozom Python alapú webfejlesztéssel és munkám során mindig is esztétikusnak tartottam egy könnyen használható de erős keretrendszert. A tapasztalataim elején mindig is óvakodtam a kliensoldali webfejlesztéstől, mert bárhogy csináltam, a jQuery alapú kliensoldali logika a végén sohasem lett olyan szép, mint amire büszke lehetnék. Mire a Javascript tudásom utolérte a Python tudásomat, elburjánoztak a kliensoldali Javascript keretrendszerek amik lehetővé teszik, hogy kliensoldalon is moduláris, tesztelhető és újrafelhasználható megoldásokat alkalmazzak.
 
-A webes modell szerkesztőkre akkor figyeltem fel, amikor a tanulmányaim során a sokadik diagramot kellett megrajzolnom és az akkori Linux rendszeremre nem találtam kielégítő minőségű diagram szerkesztőt. Találtam helyette a Lucidcharts webes eszközt, ami minden akkori próblémát megoldott számomra, ami a diagramszerkesztést illeti.
+A webes modell szerkesztőkre akkor figyeltem fel, amikor a tanulmányaim során a sokadik diagramot kellett megrajzolnom és az akkori Linux rendszeremre nem találtam kielégítő minőségű diagram szerkesztőt. Találtam helyette a Lucidcharts webes eszközt, ami minden akkori próblémát megoldott számomra, ami a diagram szerkesztést illeti.
 
-A vizuális programozásnak az az aspektusa ragadott meg, hogy vannak próblémák amikre egy gráf jellegű megoldás rugalmasabb és átláthatóbb mint a hagyományos kód alapú megoldás és a munkám során próbáltam arra figyelni, hogy olyan vizuális eszközt hozzak létre ami könnyebben old meg próblémákat.
+A vizuális programozásnak az az aspektusa ragadott meg, hogy vannak próblémák amikre egy gráf jellegű megoldás rugalmasabb és átláthatóbb mint a hagyományos kód alapú megoldás és a munkám során próbáltam arra figyelni, hogy olyan vizuális eszközt hozzak létre ami könnyebben old meg bizonyos próblémákat.
 
-Az MSc szakdolgozatom keretein belül a következőkre terjedt ki a munkám:
+
+\subsubsection{A diplomamunka felépítése}
+Az MSc diplomamunkám keretein belül a következőkre terjedt ki a munkám:
 \begin{enumerate}
 \item Vizuális programozási nyelvek áttekintése és egy vizuális programozási nyelv elkészítése,
 \item a kollaboratív diagramszerkesztés megvalósítása, amivel egyidőben több felhasználó tudja ugyanazt a dokumentumot szerkeszteni,
