--- a/LaTeX_diplomaterv/src/compile.tex
+++ b/LaTeX_diplomaterv/src/compile.tex
@@ -17,7 +17,7 @@ A vizuális programozás menete a következő egy minta nyelv példányán amibe
 \item Ezt a kódot elmenti az adatbázisba és választ küld a kliensalkalmazásnak, ekkor kétféleképpen lehet felhasználni a kódot:
 \begin{enumerate}
     \item A felhasználó böngészőjének Javascript parancssorában (példáúl Chrome Developer Console) értelmezi a kódot \lstinline{eval} segítségével és példányosítja az állapotgépet. 
-    \item Node.JS parancssorból a mintrepl segédalkalmazással betölti a kódot, majd példányosítja az állapotgépet.
+    \item Node.JS parancssorból az általam fejlesztett \lstinline{mintrepl} segédalkalmazással betölti a kódot, majd példányosítja az állapotgépet.
 \end{enumerate}
 \end{enumerate}
 
@@ -38,13 +38,14 @@ Az eredeti ``séma'' csúcsok listáját és élek listáját jelenti, viszont e
     }
 \end{lstlisting}
 
-Így ezen a struktúrán kevesebb kóddal írható egy olyan transzformáció ami valamilyen logikát valósít meg abból kiindulva, hogy milyen állapotból milyen élek mennek ki és be. Ez struktúra ami ilyenkor létrejön csak átmenetileg van felhasználva amíg kódot generál a szerveroldal, utána nem lesz használva semmire, így nem kella redundancia által okozott szokásos próblémákkal küzdeni. Ebben a formában tárolni mindig a gráfot nem hatékony, mert minden diagram manipulációs művelet több mint egy adatbázis lekérdezést jelentene és ha el szeretném kerülni a redundancia anomáliákat 
-akkor megnövekedne fölöslegesen a komplexitás (tranzakciókra lenne szükség, vagy zárolásra és ezeket nem biztosítja a MongoDB). Ez a denormalizálás viszont csak két for ciklusból áll és ritkán fut le. 
+Így ezen a struktúrán kevesebb kóddal írható egy olyan transzformáció ami valamilyen logikát valósít meg abból kiindulva, hogy milyen állapotból milyen élek mennek ki és be. 
+
+Ez a struktúra ami ilyenkor létrejön csak átmenetileg van felhasználva amíg kódot generál a szerveroldal, utána nem lesz használva semmire, így nem kell a redundancia által okozott szokásos próblémákkal küzdeni. Ebben a formában tárolni mindig a gráfot nem hatékony, mert minden diagram manipulációs művelet több mint egy adatbázis lekérdezést jelentene és ha el szeretném kerülni a redundancia anomáliákat, akkor megnövekedne fölöslegesen a komplexitás (tranzakciókra lenne szükség, vagy zárolásra és ezeket nem biztosítja a MongoDB). Ez a denormalizálás viszont csak két for ciklusból áll és ritkán fut le. 
 
 \subsubsection{Gráftranszformáció template}
 
-A gráftranszformáció template egy Underscore template. Underscore.JS egy Javascript könyvtár ami funkcionális programozás eszközökkel bővíti e nyelvet, anélkül, hogy kiterjesztené a beépített típusokat. \cite{underscorejs.org}
-Ezen belül a template rendszer lehetővé teszi egy template fájlt lefordítását adott kontextus alapján. A template-ben \lstinline{<\%= \%>} segítségével változó behelyettesítés történik, \lstinline{<\% \%>} segítségével Javascript kódot lehet értelmeztetni. 
+A gráftranszformáció template egy Underscore template. Underscore.JS egy Javascript könyvtár ami funkcionális programozás eszközökkel bővíti e nyelvet, anélkül, hogy kiterjesztené a beépített típusokat \cite{underscorejs.org}.
+Ezen belül a template rendszer lehetővé teszi egy template fájl lefordítását adott kontextus alapján. A template-ben \lstinline{<\%= \%>} segítségével változó behelyettesítés történik, \lstinline{<\% \%>} segítségével Javascript kódot lehet értelmeztetni. 
 
 \begin{lstlisting}[caption=Underscore template lefordítása]
 var compiled = _.template("hello: <%= name %>");
@@ -82,7 +83,7 @@ target
 
 Természetesen nem csak Javascript kódot lehet generáltatni az alkalmazásban, hiszen a template behelyettesítés eredménye egyszerű szöveg. 
 
-Az állapotgép nyelvhez tartozó template , egy példa állapotdiagram és a generált kód megtekinthető a második függelékben.
+Az állapotgép nyelvhez tartozó template, egy példa állapotdiagram és a generált kód megtekinthető a második függelékben.
 
 
 
@@ -91,7 +92,7 @@ Az állapotgép nyelvhez tartozó template , egy példa állapotdiagram és a ge
 \subsubsection{A generált kód felhasználása}
 %---------------------------------------------------
 
-A generált kód elmentődik az adatbázisba a diagram egyik attribútumába, és ehhez az adathoz egy API végponton keresztül lehet hozzáférni és felhasználni meg akár a triviális HTML script elem segítségével:
+A generált kód elmentődik az adatbázisba a diagram egyik attribútumába, és ehhez az adathoz egy API végponton keresztül lehet hozzáférni. Felhasználni akár a triviális HTML script elem segítségével is lehet:
 
 \begin{lstlisting}[language=HTML]
  <script type="text/javascript" src="http://localhost:3000/api/compile/modules/5242aa48ddda9b0000000001/"></script>
